// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spin /> Spin Inside a container 1`] = `
<div
  className="example"
>
  <div
    className="jc-spin jc-spin-spinning jc-spin-show-text"
  >
    <span
      className="jc-spin-dot jc-spin-dot-spin"
    >
      <i />
      <i />
      <i />
      <i />
    </span>
  </div>
</div>
`;

exports[`<Spin /> Spin basic 1`] = `
<div
  className="jc-spin jc-spin-spinning jc-spin-show-text"
>
  <span
    className="jc-spin-dot jc-spin-dot-spin"
  >
    <i />
    <i />
    <i />
    <i />
  </span>
</div>
`;
